[package]
name = "actor"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
backoff = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror ={ workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing-test = { workspace = true }