[package]
name = "store"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
actor = { path = "../actor" }
async-trait = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = "0.10"
memsecurity = { version = "3.5", features = ["encryption"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tokio-util = { workspace = true }
