[package]
name = "sqlite_db"
version = { workspace = true}
edition = { workspace = true}

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"]}
store = { path = "../../store" }
tempfile = {workspace = true }
tracing = {workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
